--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,4 +28,14 @@
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_marginTop="10dp"/>
+
+
+
+   <Button
+       android:id="@+id/button_call"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="Call"
+       android:layout_marginTop="10dp"
+       />
 </LinearLayout>
